<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="220dp"
        android:layout_height="124dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/GeorgeOrwell"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/fascinate"
            android:text="Library"
            android:textColor="@color/primaryTextColor"
            android:textSize="38sp"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="10dp" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fascinate"
        android:text="Books"
        android:textColor="@color/secondaryTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fascinate"
        android:text="New"
        android:textColor="@color/secondaryTextColor"
        app:chipBackgroundColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toStartOf="@+id/chip8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip7"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:fontFamily="@font/fascinate"
        android:text="Trends"
        app:chipBackgroundColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toStartOf="@+id/chip6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fascinate"
        android:text="Catagories"
        app:chipBackgroundColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip8"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fascinate"
        android:text="Popular"
        app:chipBackgroundColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toStartOf="@+id/chip9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip6"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip7"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/horror1" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="100dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/distopya" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="220dp"
        android:layout_height="124dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Dark_exorcist"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/chip7" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="star1"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="2dp"
        android:contentDescription="star2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/bookName_Dark_exorcist"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/bookName_1984"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="124dp"

        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/value1984"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/valueExorcist"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/writerExorcist"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/writer1984"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:contentDescription="list"
        android:src="@drawable/ic_baseline_list_24"
        app:backgroundTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:src="@drawable/ic_baseline_person_24"
        app:backgroundTint="@color/primaryLightColor"
        android:contentDescription="person"
        app:layout_anchor="@id/bottom_app_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:layout_constraintVertical_bias="0.391" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:contentDescription="favorite"
        android:src="@drawable/ic_baseline_favorite_24"
        app:backgroundTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>